--- a/app/src/main/res/layout/app_bar_main_menu.xml
+++ b/app/src/main/res/layout/app_bar_main_menu.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    android:id="@+id/content_main_menu_coordinator_layout"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
-    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/content_main_menu_coordinator_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
@@ -28,211 +27,210 @@
 
     <LinearLayout
         android:id="@+id/floating_action_layout"
-        android:layout_gravity="top|end"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        app:layout_anchorGravity="top|end"
-        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_gravity="top|end"
         android:layout_margin="4dp"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        app:layout_anchorGravity="top|end">
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/map_zoom_plus_fab"
-            android:layout_marginTop="?attr/actionBarSize"
             android:layout_width="wrap_content"
-            app:fabSize="mini"
             android:layout_height="wrap_content"
-            app:backgroundTint="@color/colorAccent"
+            android:layout_marginTop="?attr/actionBarSize"
             android:src="@drawable/ic_add_white_48dp"
-            />
+            app:backgroundTint="@color/colorAccent"
+            app:fabSize="mini" />
+
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/map_zoom_minus_fab"
-            android:layout_marginTop="@dimen/fab_margin"
-            app:fabSize="mini"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/fab_margin"
+            android:src="@drawable/ic_remove_white_48dp"
             app:backgroundTint="@color/colorAccent"
-            android:src="@drawable/ic_remove_white_48dp" />
+            app:fabSize="mini" />
     </LinearLayout>
-
 
     <LinearLayout
         android:id="@+id/select_place_scrolling_act_content_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/windowBackground"
+        android:gravity="bottom|center_horizontal"
         android:orientation="vertical"
-        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
-        >
+        app:layout_behavior="svp.com.dontmissplaces.ui.behaviors.OverMapBottomSheetBehavior">
+
         <LinearLayout
-            android:layout_gravity="fill|fill_horizontal"
-            android:gravity="fill|fill_horizontal"
-            android:layout_height="@dimen/android_standard_toolbar_subtitle"
             android:layout_width="match_parent"
-            android:orientation="horizontal"
-            android:background="@color/common_signin_btn_default_background">
+            android:layout_height="@dimen/android_standard_toolbar_subtitle"
+            android:layout_gravity="fill|fill_horizontal"
+            android:background="@color/common_signin_btn_default_background"
+            android:gravity="fill|fill_horizontal"
+            android:orientation="horizontal">
+
             <ImageButton
                 android:id="@+id/track_recording_start_btn"
-                android:layout_weight="1"
+                style="?android:attr/borderlessButtonStyle"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_near_me_white_48dp"
-                style="?android:attr/borderlessButtonStyle" />
+                android:src="@drawable/ic_near_me_white_48dp" />
+
             <ImageButton
 
-                android:layout_weight="1"
+                style="?android:attr/borderlessButtonStyle"
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:scaleType="fitCenter"
-                android:src="@drawable/route"
-                style="?android:attr/borderlessButtonStyle" />
+                android:src="@drawable/route" />
+
             <ImageButton
                 android:id="@+id/track_recording_show_place_info_btn"
-                android:layout_weight="1"
+                style="?android:attr/borderlessButtonStyle"
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_add_location_white_48dp"
-                style="?android:attr/borderlessButtonStyle" />
+                android:src="@drawable/ic_add_location_white_48dp" />
+
             <ImageButton
-                android:layout_weight="1"
+                style="?android:attr/borderlessButtonStyle"
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_gps_fixed_white_48dp"
-                style="?android:attr/borderlessButtonStyle" />
+                android:src="@drawable/ic_gps_fixed_white_48dp" />
         </LinearLayout>
+
         <LinearLayout
-            android:id="@+id/select_place_scrolling_header_layout"
-            android:layout_height="wrap_content"
+            android:id="@+id/select_place_header_layout"
             android:layout_width="match_parent"
-            android:orientation="vertical"
+            android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
-            >
+            android:orientation="vertical"
+            android:padding="@dimen/activity_vertical_margin">
+
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/select_place_show_title"
-                android:textSize="@dimen/android_standard_headline"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/android_standard_headline" />
+
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/select_place_show_placetype"
-                android:textSize="@dimen/android_standard_subheading"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/android_standard_subheading" />
         </LinearLayout>
-        <LinearLayout
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:orientation="vertical"
-            >
-                       <android.support.v7.widget.AppCompatTextView
-                           android:layout_marginStart="16dp"
-                           android:layout_marginEnd="32dp"
-                           android:layout_gravity="center_vertical|start"
-                           android:gravity="center_vertical|start"
-                           android:layout_width="match_parent"
-                           android:layout_height="@dimen/android_standard_toolbar_subtitle"
-                           android:text="Address fdxzsf fdsf . dsf"
-                           />
-                       <android.support.v7.widget.AppCompatTextView
-                           android:layout_gravity="center_vertical|start"
-                           android:gravity="center_vertical|start"
-                           android:layout_marginStart="16dp"
-                           android:layout_marginEnd="32dp"
-                           android:layout_width="match_parent"
-                           android:layout_height="@dimen/android_standard_toolbar_subtitle"
-                           android:text="Address 3453 fdxzsf fdsf . dsf"
-                           />
 
-                       <View
-                           android:layout_marginTop="8dp"
-                           android:layout_marginBottom="8dp"
-                           android:layout_width="match_parent"
-                           android:layout_height="1dp"
-                           android:background="@android:color/darker_gray"/>
+        <LinearLayout
+            android:id="@+id/select_place_content_header_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:orientation="vertical">
+
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/select_place_show_address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical|start"
+                android:layout_marginEnd="32dp"
+                android:gravity="center_vertical|start" />
+
+            <android.support.v7.widget.AppCompatTextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/android_standard_toolbar_subtitle"
+                android:layout_gravity="center_vertical|start"
+                android:layout_marginEnd="32dp"
+                android:gravity="center_vertical|start"
+                android:text="Address 3453 fdxzsf fdsf . dsf" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:background="@android:color/darker_gray" />
+
         </LinearLayout>
 
     </LinearLayout>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/select_place_scrolling_act_save_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/fab_margin"
-        app:backgroundTint="@color/textColorWhite"
-        android:src="@drawable/ic_menu_send"
-        app:layout_anchor="@id/select_place_show_title"
-        app:layout_anchorGravity="end" />
-
+<!--timer -->
     <com.bowyer.app.fabtransitionlayout.FooterLayout
         android:id="@+id/track_recording_fabtoolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        app:ft_container_gravity="center"
-        app:ft_color="@color/colorAccent">
+        app:ft_color="@color/colorAccent"
+        app:ft_container_gravity="center">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
+            android:layout_height="wrap_content">
 
             <ImageButton
                 android:id="@+id/track_recording_resume_pause"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_pause_white_48dp"
-                android:layout_gravity="start"
                 android:layout_alignParentStart="true"
-                />
+                android:layout_gravity="start"
+                android:src="@drawable/ic_pause_white_48dp" />
+
             <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_centerInParent="true"
-                android:layout_gravity="center|center_horizontal|center_vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent">
-            <TextView
-                android:id="@+id/track_recording_distance_output"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textSize="@dimen/android_standard_subheading"
-                android:textColor="@color/textColorWhite"
-                android:gravity="center|center_horizontal|bottom"
-                android:text="0.0"
-                android:layout_gravity="left|center_horizontal|center_vertical"/>
+                android:layout_gravity="center|center_horizontal|center_vertical">
 
-            <TextView
-                android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"
-                android:id="@+id/track_recording_timer_output"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textSize="@dimen/android_standard_title"
-                android:textColor="@color/textColorWhite"
-                android:gravity="center|center_horizontal|top"
-                android:layout_gravity="center|center_horizontal|center_vertical"/>
+                <TextView
+                    android:id="@+id/track_recording_distance_output"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="left|center_horizontal|center_vertical"
+                    android:gravity="center|center_horizontal|bottom"
+                    android:text="0.0"
+                    android:textColor="@color/textColorWhite"
+                    android:textSize="@dimen/android_standard_subheading" />
 
-            <TextView
-                android:id="@+id/track_recording_speed_output"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textSize="@dimen/android_standard_subheading"
-                android:textColor="@color/textColorWhite"
-                android:gravity="center|center_horizontal|bottom"
-                android:text="0.00"
-                android:layout_gravity="right|center_horizontal|center_vertical"/>
+                <TextView
+                    android:id="@+id/track_recording_timer_output"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center|center_horizontal|center_vertical"
+                    android:layout_marginEnd="15dp"
+                    android:layout_marginStart="15dp"
+                    android:gravity="center|center_horizontal|top"
+                    android:textColor="@color/textColorWhite"
+                    android:textSize="@dimen/android_standard_title" />
+
+                <TextView
+                    android:id="@+id/track_recording_speed_output"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="right|center_horizontal|center_vertical"
+                    android:gravity="center|center_horizontal|bottom"
+                    android:text="0.00"
+                    android:textColor="@color/textColorWhite"
+                    android:textSize="@dimen/android_standard_subheading" />
             </LinearLayout>
+
             <ImageButton
                 android:id="@+id/track_recording_stop"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_stop_white_48dp"
                 android:layout_alignParentEnd="true"
-                />
+                android:src="@drawable/ic_stop_white_48dp" />
         </RelativeLayout>
     </com.bowyer.app.fabtransitionlayout.FooterLayout>
 
