--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,9 +7,14 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">10dp</dimen>
 
+    <!--ALL CAPS-->
+    <dimen name="android_standard_button_textsize">14sp</dimen>
+
     <dimen name="android_standard_headline">24sp</dimen>
     <dimen name="android_standard_title">20sp</dimen>
     <dimen name="android_standard_subheading">16sp</dimen>
+    <dimen name="android_standard_body_textsize">14sp</dimen>
+    <dimen name="android_standard_caption_textsize">12sp</dimen>
     <dimen name="android_standard_toolbar_subtitle">48dp</dimen>
     <dimen name="android_standard_list_item">72dp</dimen>
 
