--- a/dontmissstation/src/main/res/layout/app_bar_main.xml
+++ b/dontmissstation/src/main/res/layout/app_bar_main.xml
@@ -22,6 +22,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_main" />
+    <include layout="@layout/mapzoomlayout" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
