--- a/dontmissstation/src/main/res/layout/activity_edit_subway_line_scrolling.xml
+++ b/dontmissstation/src/main/res/layout/activity_edit_subway_line_scrolling.xml
@@ -8,7 +8,7 @@
     tools:context="svp.com.dontmissstation.ui.activities.EditSubwayLineScrollingActivity">
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/app_bar"
+        android:id="@+id/activity_route_app_bar"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:fitsSystemWindows="true"
@@ -105,7 +105,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
         android:src="@android:drawable/ic_dialog_email"
-        app:layout_anchor="@id/app_bar"
+        app:layout_anchor="@id/activity_route_app_bar"
         app:layout_anchorGravity="bottom|end" />
 
     <android.support.design.widget.FloatingActionButton
