--- a/dontmissstation/src/main/res/layout/activity_route_scrolling.xml
+++ b/dontmissstation/src/main/res/layout/activity_route_scrolling.xml
@@ -6,31 +6,57 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="svp.com.dontmissstation.ui.activities.RouteScrollingActivity">
+    tools:context=".ui.activities.RouteScrollingActivity">
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/app_bar"
-        android:fitsSystemWindows="true"
-        android:layout_height="@dimen/app_bar_height"
+
+        android:id="@+id/activity_route_app_bar"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/toolbar_layout"
-            android:fitsSystemWindows="true"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/activity_route_toolbar_id"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:layout_collapseMode="none"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:contentScrim="?attr/colorPrimary">
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_marginBottom="@dimen/activity_horizontal_marginX2"
+            android:orientation="vertical">
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/activity_route_toolbar_id"
-                android:layout_height="?attr/actionBarSize"
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/activity_rouse_station_from_label"
                 android:layout_width="match_parent"
-                app:layout_collapseMode="pin"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
+                android:layout_height="wrap_content"
+                android:text="@string/select_route_station_from" />
 
-        </android.support.design.widget.CollapsingToolbarLayout>
+            <AutoCompleteTextView
+                android:id="@+id/activity_rouse_station_from_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textAutoCorrect"
+                android:labelFor="@id/activity_rouse_station_from_label" />
+
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/activity_rouse_station_to_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/android_standard_list_item_padding"
+                android:text="@string/select_route_station_to" />
+
+            <android.support.v7.widget.AppCompatEditText
+                android:id="@+id/activity_rouse_station_to_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:labelFor="@id/activity_rouse_station_to_label" />
+
+        </LinearLayout>
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_route_scrolling" />
@@ -40,8 +66,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
-        app:layout_anchor="@id/app_bar"
-        app:layout_anchorGravity="bottom|end"
-        android:src="@android:drawable/ic_dialog_email" />
+        android:src="@android:drawable/ic_menu_rotate"
+        app:layout_anchor="@id/activity_route_app_bar"
+        app:layout_anchorGravity="bottom|end" />
 
 </android.support.design.widget.CoordinatorLayout>
