--- a/dontmissstation/src/main/res/layout/app_bar_main.xml
+++ b/dontmissstation/src/main/res/layout/app_bar_main.xml
@@ -29,11 +29,14 @@
         android:id="@+id/select_place_scrolling_act_content_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
         android:gravity="bottom|center_horizontal"
         android:orientation="vertical"
-        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
-        <!-- action btns toolbar-->
+        android:layout_gravity="bottom"
+        >
+        <!--
+            app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
+            action btns toolbar
+        -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/android_standard_toolbar_subtitle"
@@ -78,15 +81,6 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/select_place_header_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/colorPrimary"
-            android:orientation="vertical"
-            android:padding="@dimen/activity_vertical_margin">
-
-        </LinearLayout>
     </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
