--- a/dontmissstation/src/main/res/layout/content_station_list.xml
+++ b/dontmissstation/src/main/res/layout/content_station_list.xml
@@ -11,5 +11,12 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="svp.com.dontmissstation.ui.activities.StationListActivity"
     tools:showIn="@layout/activity_station_list">
+        <android.support.v7.widget.RecyclerView
+            android:clickable="true"
+            android:focusable="true"
+            android:id="@+id/activity_station_list_recyclerView"
+            android:scrollbars="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
 </RelativeLayout>
