--- a/dontmissstation/src/main/res/layout/subway_station_template.xml
+++ b/dontmissstation/src/main/res/layout/subway_station_template.xml
@@ -1,45 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/station_template_card_view"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_marginBottom="1dp"
+    android:layout_marginBottom="2dp"
+    android:background="@color/text_white"
     card_view:cardCornerRadius="0dp">
+
     <LinearLayout
-        android:background="@color/text_white"
-        android:padding="@dimen/android_standard_list_item_padding"
-        android:layout_height="match_parent"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+        android:background="@android:color/transparent"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <TextView
-            android:layout_marginStart="@dimen/android_standard_list_item_padding"
-            android:id="@+id/activity_add_new_subway_station_name_textview"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/text_size_medium_btn"
             android:layout_weight="1"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Heiligenstadt"
-            />
+            android:orientation="vertical"
+            android:padding="@dimen/activity_vertical_margin">
 
-        <TextView
-            android:id="@+id/activity_add_new_subway_line_template_line_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/text_white"
-            android:textAlignment="center"
-            android:textStyle="bold"
-            android:background="@color/colorPrimary"
-            android:paddingTop="2dp"
-            android:paddingBottom="2dp"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:text="U3"/>
+            <TextView
+                android:id="@+id/activity_add_new_subway_station_name_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_marginBottom="@dimen/activity_horizontal_margin"
+                android:layout_weight="1"
+                android:text="Heiligenstadt"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="@dimen/text_size_medium_btn" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:background="@android:color/transparent"
+                android:gravity="center_vertical"
+                android:id="@+id/activity_add_new_subway_line_template_lines_layout"
+                android:orientation="horizontal">
+<!--
+                <TextView
+                    android:id="@+id/activity_add_new_subway_line_template_line_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorPrimary"
+                    android:paddingBottom="2dp"
+                    android:paddingEnd="10dp"
+                    android:paddingStart="10dp"
+                    android:paddingTop="2dp"
+                    android:text="U3"
+                    android:textAlignment="center"
+                    android:textColor="@color/text_white"
+                    android:textStyle="bold" />
+-->
+            </LinearLayout>
+        </LinearLayout>
+        <View
+            android:background="@color/general_border_gray"
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            />
+        <LinearLayout
+            android:layout_width="48dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ImageButton
+                android:layout_weight="1"
+                android:layout_width="48dp"
+                android:layout_height="match_parent"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_arrow_upward_black_24dp" />
+            <View
+                android:background="@color/general_border_gray"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                />
+            <ImageButton
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_weight="1"
+                android:layout_width="48dp"
+                android:layout_height="match_parent"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_arrow_downward_black_24dp" />
+        </LinearLayout>
+
+
     </LinearLayout>
 </android.support.v7.widget.CardView>
