--- a/dontmissstation/src/main/res/layout/content_edit_station.xml
+++ b/dontmissstation/src/main/res/layout/content_edit_station.xml
@@ -74,65 +74,10 @@
         android:text="Pick on map"
         android:textColor="@color/text_white" />
 
-    <!--station from-->
-    <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    <ListView
+        android:id="@+id/activity_edit_subway_station_connect_stations"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginBottom="2dp"
-        android:background="@color/text_white"
-        card_view:cardCornerRadius="0dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:background="@android:color/transparent"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:padding="@dimen/activity_vertical_margin">
-
-                <TextView
-                    android:id="@+id/activity_edit_subway_station_from_station_name_textview"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_marginBottom="@dimen/activity_horizontal_margin_12dp"
-                    android:layout_weight="1"
-                    android:text="Heiligenstadt"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textSize="@dimen/text_size_medium_btn" />
-
-                <LinearLayout
-                    android:id="@+id/activity_edit_subway_station_from_lines_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
-                    android:background="@android:color/transparent"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal"></LinearLayout>
-            </LinearLayout>
-
-
-            <ImageButton
-                android:id="@+id/activity_add_new_subway_line_template_up_btn"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="48dp"
-                android:layout_height="match_parent"
-
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_arrow_upward_black_24dp" />
-
-        </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-    <!--station to-->
+        android:layout_height="match_parent">
+    </ListView>
 
 </LinearLayout>
