--- a/dontmissstation/src/main/res/layout/content_search_new_route.xml
+++ b/dontmissstation/src/main/res/layout/content_search_new_route.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:scrollbars="none"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="svp.com.dontmissstation.ui.activities.SearchNewRouteActivity"
     tools:showIn="@layout/activity_search_new_route">
 
     <ListView
         android:id="@+id/activity_search_new_route_list_routes"
+        android:choiceMode="singleChoice"
+        android:clickable="true"
+        android:focusable="true"
+        android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"/>
 
-</android.support.v4.widget.NestedScrollView>
+</FrameLayout>
